fix if else functionality

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
       <h2>Select age</h2>
       <form class="age">
-        <select class="form-control" id="age">
-          <option value="false">Under 18</option>
-          <option value="true">18, or older</option>
+        <select class="form-control">
+          <option>Choose One</option>
+          <option>Under 18</option>
+          <option>18, or older</option>
 
         </select>
         <button type="submit" class="btn">Submit</button>
